checkstyle 警告の対応