@@ -6,11 +6,8 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
-import org.apache.commons.lang3.ArrayUtils;
+import java.util.UUID;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -35,67 +32,67 @@ public class CatalogDomainServiceTest {
   @InjectMocks
   private CatalogDomainService service;
 
-  private static final Random random = new Random();
-
   @Test
   void testGetExistCatalogItems_正常系_リポジトリのfindByCategoryIdInを1度だけ呼出す() {
     // Arrange
-    long[] catalogItemIds = {1L, 2L};
-    List<Long> catalogItemIdsList = Arrays.asList(ArrayUtils.toObject(catalogItemIds));
-    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
-        .collect(Collectors.toList());
-    when(this.catalogRepository.findByCatalogItemIdIn(catalogItemIdsList)).thenReturn(catalogItems);
+    UUID firstCatalogItemId = UUID.randomUUID();
+    UUID secondCatalogItemId = UUID.randomUUID();
+    List<UUID> catalogItemIds = List.of(firstCatalogItemId, secondCatalogItemId);
+    List<CatalogItem> catalogItems = catalogItemIds.stream().map(this::createCatalogItem).toList();
+    when(this.catalogRepository.findByCatalogItemIdIn(catalogItemIds)).thenReturn(catalogItems);
 
     // Act
-    service.getExistCatalogItems(catalogItemIdsList);
+    service.getExistCatalogItems(catalogItemIds);
 
     // Assert
-    verify(this.catalogRepository, times(1)).findByCatalogItemIdIn(catalogItemIdsList);
+    verify(this.catalogRepository, times(1)).findByCatalogItemIdIn(catalogItemIds);
   }
 
   @Test
   void testExistAll_正常系_リポジトリ内に存在するアイテムのリストを返す() {
     // Arrange
-    long[] catalogItemIds = {2L};
-    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
-        .collect(Collectors.toList());
-    when(this.catalogRepository.findByCatalogItemIdIn(List.of(1L, 2L))).thenReturn(catalogItems);
+    UUID firstCatalogItemId = UUID.randomUUID();
+    UUID secondCatalogItemId = UUID.randomUUID();
+    List<UUID> requestedCatalogItemIds = List.of(firstCatalogItemId, secondCatalogItemId);
+    List<CatalogItem> catalogItems = List.of(createCatalogItem(secondCatalogItemId));
+    when(this.catalogRepository.findByCatalogItemIdIn(requestedCatalogItemIds))
+        .thenReturn(catalogItems);
 
     // Act
-    List<CatalogItem> actualItems = service.getExistCatalogItems(List.of(1L, 2L));
+    List<CatalogItem> actualItems = service.getExistCatalogItems(requestedCatalogItemIds);
 
     // Assert
-    assertThat(actualItems.size()).isEqualTo(1);
-    assertThat(actualItems.get(0).getId()).isEqualTo(2L);
+    assertThat(actualItems).hasSize(1);
+    assertThat(actualItems.get(0).getId()).isEqualTo(secondCatalogItemId);
   }
 
   @Test
   void testExistAll_正常系_リポジトリのfindByCategoryIdInを1度だけ呼出す() {
     // Arrange
-    long[] catalogItemIds = {1L, 2L};
-    List<Long> catalogItemIdsList = Arrays.asList(ArrayUtils.toObject(catalogItemIds));
-    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
-        .collect(Collectors.toList());
-    when(this.catalogRepository.findByCatalogItemIdIn(catalogItemIdsList)).thenReturn(catalogItems);
+    UUID firstCatalogItemId = UUID.randomUUID();
+    UUID secondCatalogItemId = UUID.randomUUID();
+    List<UUID> catalogItemIds = List.of(firstCatalogItemId, secondCatalogItemId);
+    List<CatalogItem> catalogItems = catalogItemIds.stream().map(this::createCatalogItem).toList();
+    when(this.catalogRepository.findByCatalogItemIdIn(catalogItemIds)).thenReturn(catalogItems);
 
     // Act
-    service.existAll(catalogItemIdsList);
+    service.existAll(catalogItemIds);
 
     // Assert
-    verify(this.catalogRepository, times(1)).findByCatalogItemIdIn(catalogItemIdsList);
+    verify(this.catalogRepository, times(1)).findByCatalogItemIdIn(catalogItemIds);
   }
 
   @Test
   void testExistAll_正常系_カタログアイテムIdがすべて存在する場合trueを返す() {
     // Arrange
-    long[] catalogItemIds = {1L, 2L};
-    List<Long> catalogItemIdsList = Arrays.asList(ArrayUtils.toObject(catalogItemIds));
-    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
-        .collect(Collectors.toList());
-    when(this.catalogRepository.findByCatalogItemIdIn(catalogItemIdsList)).thenReturn(catalogItems);
+    UUID firstCatalogItemId = UUID.randomUUID();
+    UUID secondCatalogItemId = UUID.randomUUID();
+    List<UUID> catalogItemIds = List.of(firstCatalogItemId, secondCatalogItemId);
+    List<CatalogItem> catalogItems = catalogItemIds.stream().map(this::createCatalogItem).toList();
+    when(this.catalogRepository.findByCatalogItemIdIn(catalogItemIds)).thenReturn(catalogItems);
 
     // Act
-    boolean existAll = service.existAll(List.of(1L, 2L));
+    boolean existAll = service.existAll(catalogItemIds);
 
     // Assert
     assertThat(existAll).isTrue();
@@ -104,13 +101,15 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistAll_正常系_カタログアイテムIdが一部だけ存在する場合falseを返す() {
     // Arrange
-    long[] catalogItemIds = {2L};
-    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
-        .collect(Collectors.toList());
-    when(this.catalogRepository.findByCatalogItemIdIn(List.of(1L, 2L))).thenReturn(catalogItems);
+    UUID firstCatalogItemId = UUID.randomUUID();
+    UUID secondCatalogItemId = UUID.randomUUID();
+    List<UUID> requestedCatalogItemIds = List.of(firstCatalogItemId, secondCatalogItemId);
+    List<CatalogItem> catalogItems = List.of(createCatalogItem(secondCatalogItemId));
+    when(this.catalogRepository.findByCatalogItemIdIn(requestedCatalogItemIds))
+        .thenReturn(catalogItems);
 
     // Act
-    boolean existAll = service.existAll(List.of(1L, 2L));
+    boolean existAll = service.existAll(requestedCatalogItemIds);
 
     // Assert
     assertThat(existAll).isFalse();
@@ -119,13 +118,14 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistAll_正常系_カタログアイテムIdが1件も存在しない場合falseを返す() {
     // Arrange
-    long[] catalogItemIds = {};
-    List<CatalogItem> catalogItems = Arrays.stream(catalogItemIds).mapToObj(this::createCatalogItem)
-        .collect(Collectors.toList());
-    when(this.catalogRepository.findByCatalogItemIdIn(List.of(1L, 2L))).thenReturn(catalogItems);
+    UUID firstCatalogItemId = UUID.randomUUID();
+    UUID secondCatalogItemId = UUID.randomUUID();
+    List<UUID> requestedCatalogItemIds = List.of(firstCatalogItemId, secondCatalogItemId);
+    when(this.catalogRepository.findByCatalogItemIdIn(requestedCatalogItemIds))
+        .thenReturn(List.of());
 
     // Act
-    boolean existAll = service.existAll(List.of(1L, 2L));
+    boolean existAll = service.existAll(requestedCatalogItemIds);
 
     // Assert
     assertThat(existAll).isFalse();
@@ -134,8 +134,8 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogBrand_正常系_指定したカタログブランドが存在する場合trueを返す() {
     // Arrange
-    long targetId = 1L;
-    CatalogBrand catalogBrand = this.createCatalogBrand();
+    UUID targetId = UUID.randomUUID();
+    CatalogBrand catalogBrand = this.createCatalogBrand(targetId);
     when(this.catalogBrandRepository.findById(targetId)).thenReturn(catalogBrand);
 
     // Act
@@ -148,7 +148,7 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogBrand_正常系_指定したカタログブランドが存在しない場合falseを返す() {
     // Arrange
-    long targetId = 1L;
+    UUID targetId = UUID.randomUUID();
     when(this.catalogBrandRepository.findById(targetId)).thenReturn(null);
 
     // Act
@@ -161,8 +161,8 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogCategory_正常系_指定したカタログカテゴリが存在する場合trueを返す() {
     // Arrange
-    long targetId = 1L;
-    CatalogCategory catalogCategory = this.createCatalogCategory();
+    UUID targetId = UUID.randomUUID();
+    CatalogCategory catalogCategory = this.createCatalogCategory(targetId);
     when(this.catalogCategoryRepository.findById(targetId)).thenReturn(catalogCategory);
 
     // Act
@@ -175,7 +175,7 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogCategory_正常系_指定したカタログカテゴリが存在しない場合falseを返す() {
     // Arrange
-    long targetId = 1L;
+    UUID targetId = UUID.randomUUID();
     when(this.catalogCategoryRepository.findById(targetId)).thenReturn(null);
 
     // Act
@@ -188,7 +188,7 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogItem_正常系_指定したカタログアイテムが存在する場合trueを返す() {
     // Arrange
-    long targetId = 1L;
+    UUID targetId = UUID.randomUUID();
     CatalogItem catalogItem = this.createCatalogItem(targetId);
     when(this.catalogRepository.findById(targetId)).thenReturn(catalogItem);
 
@@ -202,7 +202,7 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogItem_正常系_指定したカタログアイテムが存在しない場合falseを返す() {
     // Arrange
-    long targetId = 1L;
+    UUID targetId = UUID.randomUUID();
     when(this.catalogRepository.findById(targetId)).thenReturn(null);
 
     // Act
@@ -215,7 +215,7 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogItemIncludingDeleted_正常系_指定したカタログアイテムが存在する場合trueを返す() {
     // Arrange
-    long targetId = 1L;
+    UUID targetId = UUID.randomUUID();
     CatalogItem catalogItem = this.createCatalogItem(targetId);
     when(this.catalogRepository.findByIdIncludingDeleted(targetId)).thenReturn(catalogItem);
 
@@ -229,7 +229,7 @@ public class CatalogDomainServiceTest {
   @Test
   void testExistCatalogItemIncludingDeleted_正常系_指定したカタログアイテムが存在しない場合falseを返す() {
     // Arrange
-    long targetId = 1L;
+    UUID targetId = UUID.randomUUID();
     when(this.catalogRepository.findByIdIncludingDeleted(targetId)).thenReturn(null);
 
     // Act
@@ -239,9 +239,7 @@ public class CatalogDomainServiceTest {
     assertThat(existCatalogItem).isFalse();
   }
 
-  private CatalogItem createCatalogItem(long id) {
-    long defaultCatalogCategoryId = random.nextInt(1000);
-    long defaultCatalogBrandId = random.nextInt(1000);
+  private CatalogItem createCatalogItem(UUID id) {
     String defaultDescription = "Description.";
     String defaultName = "Name";
     BigDecimal defaultPrice = BigDecimal.valueOf(100_000_000L);
@@ -249,20 +247,19 @@ public class CatalogDomainServiceTest {
     boolean defaultIsDeleted = false;
 
     CatalogItem catalogItem = new CatalogItem(id, defaultName, defaultDescription, defaultPrice,
-        defaultProductCode, defaultCatalogCategoryId, defaultCatalogBrandId, defaultIsDeleted);
-    // catalogItem.setId(id);
+        defaultProductCode, UUID.randomUUID(), UUID.randomUUID(), defaultIsDeleted);
     return catalogItem;
   }
 
-  private CatalogBrand createCatalogBrand() {
-    String defaultName = "Name";
-    CatalogBrand catalogBrand = new CatalogBrand(defaultName);
+  private CatalogBrand createCatalogBrand(UUID id) {
+    CatalogBrand catalogBrand = new CatalogBrand("Name");
+    catalogBrand.setId(id);
     return catalogBrand;
   }
 
-  private CatalogCategory createCatalogCategory() {
-    String defaultName = "Name";
-    CatalogCategory catalogCategory = new CatalogCategory(defaultName);
+  private CatalogCategory createCatalogCategory(UUID id) {
+    CatalogCategory catalogCategory = new CatalogCategory("Name");
+    catalogCategory.setId(id);
     return catalogCategory;
   }
 }
